--- a/templates/_base.html
+++ b/templates/_base.html
@@ -22,9 +22,11 @@
 	
 	
 	<main>
-		{% block content %}
-		
-        {% endblock content %}
+		<div class="container">
+			{% block content %}
+			
+			{% endblock content %}
+		</div>
 	</main>
 	
 
