--- a/templates/galleries/gallery.html
+++ b/templates/galleries/gallery.html
@@ -6,19 +6,22 @@
 
 {% block content %}
 <div class="row">
-    <h1>مجموعه عکس‌ها</h1>
+    <h1>{{ gallery }}</h1>
 </div>
 <div class="row">
-    {% for gallery in galleries %}
+    {% for image in gallery.images.all %}
     <div class="col">
         <div class="card" style="width: 18rem;">
-            {% if gallery.get_cover %}
-            <img src="{{ gallery.get_cover.thumb.url }}" class="card-img-top" alt="...">
-            {% endif %}
+            
+            <img src="{{ image.thumb.url }}" class="card-img-top" alt="...">
+            
             <div class="card-body">
-                <h5 class="card-title">{{ gallery }}</h5>
-                <p class="card-text">{{ gallery.description }}</p>
-                <a href="{% url 'galleries:gallery_details' gallery.id %}" class="btn btn-dark">دیدن گالری</a>
+                {% comment %}
+                <h5 class="card-title">{{ image.title }}</h5>
+                {% endcomment %}
+                <p class="card-text">{{ image.description }}</p>
+                <a href="{{ image.file.url }}" target="_blank" class="btn btn-dark">...</a>
+                
             </div>
         </div>
 
