--- a/templates/generals/home.html
+++ b/templates/generals/home.html
@@ -5,5 +5,51 @@
 {% endblock title %}
 
 {% block content %}
-  Home
+<div class="table-responsive">
+
+  <table class="table table-striped">
+    <tbody>
+      حسن اقارب پرست فرزند محمدرحيم
+      <tr>
+        <td>1325</td>	<td>متولد ارديبهشت ماه در اصفهان</td>
+      </tr>
+      <tr>
+        <td>1343</td>	<td>پايان تحصيلات متوسطه - ورود به دانشکده افسري</td>
+      </tr>
+      <tr>
+        <td>1347</td>	<td>فارغ التحصيل دانشکده افسري با درجه ستوان دوم - ورود به دوره مقدماتي زرهي شيراز</td>
+      </tr>
+      
+      <tr>
+        <td>1350</td>	<td>ازدواج با حوريه کلاهدوز قوچاني</td>
+      </tr>
+      <tr>
+        <td>1352</td>	<td>تولد اولين فرزند : بصير</td>
+      </tr>
+      <tr>
+        <td>1355</td>	<td>اعزام به آمريکا براي گذراندن دوره نظامي تولد دومين فرزند: محمد شريف</td>
+      </tr>
+      
+      <tr>
+        <td>1356</td>	<td>پايان خدمت در شيراز و مراجعت به تهران براي دوره فرماندهي و ستاد</td>
+      </tr>
+      <tr>
+        <td>1358</td>	<td>تولد سومين فرزند: محمد رحيم</td>
+      </tr>
+      <tr>
+        <td>1360</td>	<td>سفر حج</td>
+      </tr>
+      <tr>
+        <td>1361</td>	<td>تولد چهارمين فرزند: محمد علي</td>
+      </tr>
+      <tr>
+        <td>1362</td>	<td>تقاضاي انتقال از ستاد مشترک به مناطق عملياتي جنوب</td>
+      </tr>
+      <tr>
+        <td>1363</td>	<td>در 25 مهرماه بر اثر اصابت خمپاره و درحين بازديد از جزاير مجنون به شهادت رسيد</td>
+      </tr>
+      
+    </tbody>
+  </table>
+</div>
 {% endblock content %}
