--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -29,7 +29,7 @@
           {% endcomment %}
 
           <li class="nav-item">
-            <a class="nav-link" href="#">گواهینامه‌ها</a>
+            <a class="nav-link {% if navSection == 'certificates' %}active{% endif %}" href="{% url 'generals:certificates' %}">گواهینامه‌ها</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">فیلم</a>
