--- a/templates/galleries/gallery.html
+++ b/templates/galleries/gallery.html
@@ -12,15 +12,18 @@
     {% for image in gallery.images.all %}
     <div class="col">
         <div class="card" style="width: 18rem;">
-            
+            {% if image.thumb %}
             <img src="{{ image.thumb.url }}" class="card-img-top" alt="...">
+            {% else %}
+            ...
+            {% endif %}
             
             <div class="card-body">
                 {% comment %}
                 <h5 class="card-title">{{ image.title }}</h5>
                 {% endcomment %}
                 <p class="card-text">{{ image.description }}</p>
-                <a href="{{ image.file.url }}" target="_blank" class="btn btn-dark">...</a>
+                <a href="{{ image.thumb.url }}" target="_blank" class="btn btn-dark">...</a>
                 
             </div>
         </div>
