--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -10,7 +10,7 @@
             <a class="nav-link {% if navSection == 'home' %}active{% endif %}" aria-current="page" href="{% url 'generals:home' %}">خانه</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">زندگینامه</a>
+            <a class="nav-link" href="{% url 'timeline:timeline' %}">گاهشمار</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if navSection == 'galleries' %}active{% endif %}" href="{% url 'galleries:galleries' %}">آرشیو عکس‌ها</a>
