--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,6 +14,9 @@
 	<script src="https://kit.fontawesome.com/9f95ff1f17.js" crossorigin="anonymous"></script>	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	{% endcomment %}
+	{% block head %}
+	  
+	{% endblock head %}
 </head>
 <body>
 	<header>
@@ -23,9 +26,9 @@
 	
 	<main>
 		<div class="container">
-			{% block content %}
-			
-			{% endblock content %}
+		{% block content %}
+		
+		{% endblock content %}
 		</div>
 	</main>
 	
