update slider pagination bullet

--- a/templates/generals/home.html
+++ b/templates/generals/home.html
@@ -32,6 +32,15 @@
         object-fit: contain;
         margin: 0 auto;
     }
+        /* Custom pagination styles */
+        .swiper-pagination-bullet {
+        background: #999999; /* Default bullet color */
+        opacity: 1;
+    }
+    
+    .swiper-pagination-bullet-active {
+        background: #212529; /* Active bullet color - change to your preferred color */
+    }
     
     /* Adjust padding for smaller screens */
     @media (max-width: 768px) {
