--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,10 +1,12 @@
 <div class="container-fluid bg-dark text-light">
-    <div class="row text-center py-5">
+    <div class="row text-center pt-4 ">
         <div class="col">
+            <p>ساخته شده توسط : <i>رحیم</i></p>
+            {% comment %}              
             <p>تماس با ما: 
                 <span dir="ltr">****</span>
             </p>
+            {% endcomment %}
         </div>
-        
     </div>
 </div>
