--- a/generals/static/style.css
+++ b/generals/static/style.css
@@ -53,3 +53,25 @@
   strong, b, h1, h2, h3 {
     font-weight: 700; /* Uses Vazirmatn-Bold.ttf */
   }
+
+  .img-card {
+    height: 19rem; 
+    position: relative;
+  }
+
+  .img-img {
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #b0b0b0;
+  }
