--- a/static/style.css
+++ b/static/style.css
@@ -54,24 +54,28 @@
     font-weight: 700; /* Uses Vazirmatn-Bold.ttf */
   }
 
+  a {
+    color: #212529;  
+  }
+  a:hover {
+    color: balck;  
+
+  }
+
   .img-card {
     height: 19rem; 
     position: relative;
+    justify-content: center;
+    align-content: center;
   }
 
-  .img-img {
+  .img-img {    
     max-height: 100%;
     max-width: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    object-fit: contain;  
     margin: auto;
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
-    border-color: #b0b0b0;
+    border-color: #b0b0b0; 
   }
