--- a/templates/galleries/image_details.html
+++ b/templates/galleries/image_details.html
@@ -25,7 +25,7 @@
                     <td>عنوان:</td> <td>{{ image.title }}</td>
                 </tr>
                 <tr>
-                    <td>عنوان آلبوم:</td> xxx
+                    <td>عنوان آلبوم:</td>
                     <td>
                         <a href="{% url 'galleries:gallery_details' image.gallery.id %}">
                             {{ image.gallery }}
