--- a/templates/generals/home.html
+++ b/templates/generals/home.html
@@ -71,7 +71,7 @@
 <div class="row my-2">
     <h2>گزیده‌ای از گواهینامه‌ها</h2>
     {% for image in certs %}
-    <div class="col-sm-6 col-md-3 my-2">
+    <div class="col-sm-6 col-md-3 my-2  text-center">
         <a href="{{ image.get_absolute_url}}">
             <div class="img-card">
                 <img src="{{ image.thumb.url }}" alt="{{ image.title }}" class="img-img">
