--- a/templates/galleries/image_details.html
+++ b/templates/galleries/image_details.html
@@ -5,8 +5,17 @@
 {% endblock title %}
 
 {% block content %}
+<div class="my-2 text-muted">
+    {% if navSection == 'certificates' %}
+    <a href="{% url 'generals:certificates' %}">گواهینامه‌ها</a>
+    {% else %}
+    <a href="{% url 'galleries:galleries' %}">عکس‌ها</a>
+    {% endif %}
+     / <a href="{% url 'galleries:gallery_details' image.gallery.id %}" >{{ image.gallery }}</a>
+     / <a href="{% url 'galleries:gallery_details' image.gallery.id %}" class="fw-bold">{{ image }}</a>
+</div>
 <div class="row">
-    <h1>{{ image.title }}</h1>
+    <h2>{{ image.title }}</h2>
 </div>
 <div class="row my-2">
     <div class="col-md-6">
